k8s/api-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - name: api-server
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_1bece455b14c:latest
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: template-volume
              mountPath: /app/template
              readOnly: true
            - name: firebase-secret-volume
              mountPath: /app/main/resources/firebase-key.json
              subPath: firebase-key.json
              readOnly: true
      volumes:
        - name: template-volume
          configMap:
            name: template-config
        - name: firebase-secret-volume
          secret:
            secretName: firebase-key
            items:
              - key: firebase-key.json
                path: firebase-key.json
---

apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
    selector:
        app: api-server
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
    type: ClusterIP
