k8s/osrm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osrm-server
  template:
    metadata:
      labels:
        app: osrm-server
    spec:
      volumes:
        - name: osrm-data
          emptyDir: { }

      containers:
        - name: osrm-server
          image: osrm/osrm-backend:v5.25.0
          command: [ "osrm-routed", "--algorithm", "mld", "/data/south-korea-latest.osrm" ]
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: osrm-data
              mountPath: /data
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"

---

apiVersion: v1
kind: Service
metadata:
  name: osrm-server
spec:
  selector:
    app: osrm-server
  ports:
    - port: 5000
      targetPort: 5000
