k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: krmp-d2hub-idock.9rum.cc/goorm/redis:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
    selector:
        app: redis
    ports:
        - port: 6379
          targetPort: 6379
