k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giggle-dev-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app.kubernetes.io/managed-by: kargocd
spec:
  rules:
    - http:
        paths:
          - path: /api/(.*)
            backend:
                service:
                    name: api-server
                    port:
                        number: 8080
            pathType: ImplementationSpecific
